# people-counter-cpp

./: CMakeLists.txt  README.md  diagrams.txt  setup.sh
ieservice/: CMakeLists.txt
ieservice/sample/: CMakeLists.txt  common.hpp  main.cpp  mqtt.cpp  mqtt.h
systemd/: cv.service  ffserver.service  webpack.service  webserver.service
